fixed (hopefully) contact main on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -412,14 +412,13 @@ main.genio-civile ul {
 /********** CONTATTO **********/
 
 main.contatto {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: 1em;
-	justify-content: center;
+	display: flex;
 }
 
 main.contatto .info {
 	font-family: 'Lato', sans-serif;
+	width: 50%;
+	margin-right: 10px;
 }
 
 main.contatto .info .apprendisti {
@@ -458,6 +457,11 @@ main.contatto h3 {
 	margin-bottom: 2rem;
 }
 
+main.contatto .contact-form {
+	width: 50%;
+	margin-left: 10px;
+}
+
 main.contatto form .form-group {
 	display: flex;
 	align-items: center;
@@ -487,13 +491,14 @@ main.contatto input:not([type="submit"]), main.contatto textarea {
 
 main.contatto input[type="submit"] {
 	margin-top: 1em;
-	width: 400px;
+	width: 100%;
 	border: 0;
 	padding: 7px;
 	color: white;
 	background-color: black;
 	border-radius: 5px;
 	font-size: 14px;
+	-webkit-appearance: none;
 }
 
 main.contatto input[type="submit"]:hover {
@@ -517,6 +522,17 @@ main.contatto input[type="submit"]:hover {
 			"forestale"
 		;
 	}
+	main.contatto {
+		flex-direction: column;
+	}
+	main.contatto .info, 
+	main.contatto .contact-form {
+		width: 100%;
+		margin: 0;
+	}
+	main.contatto .info {
+		margin-bottom: 20px;
+	}
 }
 
 @media screen and (max-width: 1023px) {
@@ -533,8 +549,18 @@ main.contatto input[type="submit"]:hover {
 		grid-template-columns: 1fr;
 		grid-template-areas: "about" "gallery";
 	}
-	main.contatto {
-		grid-template-columns: 1fr;
+	main.contatto form .form-group {
+		flex-direction: column;
+	}
+	main.contatto input:not([type="submit"]), main.contatto textarea {
+		width: 100%;
+		min-width: 100%;
+		max-width: 100%;
+	}
+	main.contatto label {
+		width: 100%;
+		text-align: left;
+		margin-bottom: 10px;
 	}
 }
 
